# sharefin

./: .gitignore  README.md
doc/diagrams/: data_model.puml  deployment.puml
docker/dev/: Dockerfile  docker-compose.yml
src/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/app/: main.py
src/backend/app/models/: expense.py  expense_split.py  person.py
src/backend/app/routers/: expense.py
src/frontend/: pyproject.toml  requirements.txt
src/frontend/app/: main.py
src/frontend/app/static/css/: style.css
src/frontend/app/templates/: base.html  index.html
src/frontend/app/templates/partials/: add_expense_form.html  list_item_expense.html
