[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharefin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sharefin-backend = "app.main:main"
sharefin-backend-debug = "app.main:debug"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]