[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sharefin-frontend"
version = "0.1.0"
description = "ShareFin Frontend Service"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 3000
reload = true